chore: force height of button to prevent vertical misalignment

--- a/packages/components/src/common/CloseButton/CloseButton.less
+++ b/packages/components/src/common/CloseButton/CloseButton.less
@@ -1,6 +1,7 @@
 .np-close-button {
   color: var(--color-control-accent);
   outline: 0;
+  height: var(--size-24);
 
   &:hover {
     color: var(--color-control-accent-hover);
